@@ -1,6 +1,8 @@
 2018-02-26 Philipp Klaus Krause <pkk AT spth.de>
 
-	* index.php: added News - SDC 3.7.0 release.
+	* index.php,
+	  previous.php:
+	  Added News - SDC 3.7.0 release.
 
 2018-02-20 Philipp Klaus Krause <pkk AT spth.de>
 
